# hotkey-listener

./: .gitignore  README.md  config.toml  gui.gd  listener.gd  setup.gd
hotkey-listener/: config.ini
input-forwarder/: config.ini
rust/: Cargo.toml
rust/examples/: a_key.rs  demo.rs
rust/src/: godot.rs  hotkey_listener.rs  lib.rs
rust/src/godot/: node.rs  popup.rs
translations/: en.txt
