[package]
name = "hotkey-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "demo"

[features]
default = ["gdnative"]
gdnative = []

[dependencies]
gdnative = "0.11"
livesplit-hotkey = "0.6.0"
crossbeam-channel = "0.5"
